Fixed clipping issue at top of wave

--- a/src/components/Marketing/_marketing.scss
+++ b/src/components/Marketing/_marketing.scss
@@ -16,9 +16,11 @@ body{
   background-image: url("../../assets/wave.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  height: 400px;
+  background-size: 100vw 100%;
+  height: 35vh;
   width: 100%;
+  position: relative;
+  top: 10vh;
 }
 
 .underline{
